Cleanup of warnings and lambdas